force-app/main/default/objects/Platform__c/Platform__c.object-meta.xml
<CustomObject>
    <description>Designed to hold the details of Access Platforms or Instances.</description>
    <label>Platform</label>
    <nameField>
        <label>Platform Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>