force-app/main/default/objects/Platform__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Account record the Platform belongs to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Platforms</relationshipLabel>
    <relationshipName>Platforms</relationshipName>
    <type>Lookup</type>
</CustomField>