force-app/main/default/objects/Platform__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description / Note for Platform</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>