force-app/main/default/objects/Platform__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Which Access product Family does the platform relate to.</description>
    <label>Product Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Attache Pro</fullName>
            </value>
            <value>
                <fullName>Webroster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>