force-app/main/default/objects/Platform__c/listViews/All_Platforms.listView-meta.xml
<ListView>
    <fullName>All_Platforms</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>Status__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Platforms</label>
</ListView>